--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -6,7 +6,6 @@
   padding-top: 18%;
   margin-left: 0;
   position: absolute;
-  overflow: hidden;
 }
 
 .cubespinner {
@@ -31,44 +30,46 @@
     box-shadow: 0 0 20px 0px lightyellow;
   }
 
-  .face1 {
-    transform: translateZ(100px);
+  // Each face is rotated towards its position, then translated outward in a separate direction
+  .face--front {
+    transform: rotateY(0deg) translateZ(100px);
   }
-  .face2 {
+  .face--back {
+    transform: rotateY(180deg) translateZ(100px);
+  }
+  .face--right {
     transform: rotateY(90deg) translateZ(100px);
   }
-  .face3 {
-    transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
+  .face--left {
+    transform: rotateY(-90deg) translateZ(100px);
   }
-  .face4 {
-    transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
+  .face--top {
+    transform: rotateX(90deg) translateZ(100px);
   }
-  .face5 {
-    transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
-  }
-  .face6 {
+  .face--bottom {
     transform: rotateX(-90deg) translateZ(100px);
   }
 }
 
 @keyframes spincube {
+  // Front, top, right, back, left, bottom
   from,
   to {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    transform: rotateX(0.1deg) rotateY(0.1deg) rotateZ(0.1deg);
   }
   16% {
-    transform: rotateY(-90deg) rotateZ(90deg);
+    transform: translateZ(-100px) rotateX(-90.1deg);
   }
   33% {
-    transform: rotateY(-90deg) rotateX(90deg);
+    transform: translateZ(-100px) rotateY(-90.1deg);
   }
   50% {
-    transform: rotateY(-180deg) rotateZ(90deg);
+    transform: translateZ(-100px) rotateY(-180.1deg);
   }
   66% {
-    transform: rotateY(-270deg) rotateX(90deg);
+    transform: translateZ(-100px) rotateY(-270.1deg);
   }
   83% {
-    transform: rotateX(90deg);
+    transform: translateZ(-100px) rotateX(90.1deg);
   }
 }
