--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,14 @@ $primary-color: #ffd700;
 @import 'animate.css';
 @import '~loaders.css/src/animations/ball-scale-ripple-multiple.scss';
 
+// @font-face {
+//   font-family: 'Helvetica Neue';
+//   src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+// }
+
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+  src: url('./assets/fonts/helveticaneue.ttf') format('ttf');
 }
 
 @font-face {
