--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -19,8 +19,8 @@
   font-family: 'La Belle Aurore';
 }
 
-.bottom-tag-html {
-  margin-left: -20px;
+.bottom-tags {
+  bottom: 35px;
 }
 
 .container {
