Add global variables

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,3 +1,5 @@
+@import '../../../global_val';
+
 .logo-container {
   z-index: 0;
   width: 400px;
@@ -32,6 +34,6 @@
 }
 
 .svg-container {
-  stroke: #ffd700;
+  stroke: $primary-color;
   stroke-width: 10px;
 }
