--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -1,3 +1,5 @@
+@import '../../global_val';
+
 // Default class for text animation
 .text-animate {
   display: inline-block;
@@ -15,7 +17,7 @@
 
   &:hover {
     animation: rubberBand 1s;
-    color: #ffd700;
+    color: $primary-color;
   }
 }
 
