--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,3 +1,5 @@
+@import '../../global_val';
+
 .contact-form {
   width: 100%;
   margin-top: 20px;
@@ -43,6 +45,10 @@
     font-size: 16px;
     padding: 0 20px;
     box-sizing: border-box;
+
+    &::placeholder {
+      font-weight: 600;
+    }
   }
 
   textarea {
@@ -55,16 +61,21 @@
     font-size: 16px;
     padding: 20px;
     box-sizing: border-box;
+
+    &::placeholder {
+      font-weight: 600;
+    }
   }
 
   .flat-button {
-    color: #ffd700;
+    color: $primary-color;
     background: 0 0; // Reset background properties to their initial values
     font: 11px;
+    font-weight: 600;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
-    border: 1px solid #ffd700;
+    border: 1px solid $primary-color;
     border-radius: 4px;
     float: left;
   }
@@ -79,7 +90,7 @@
   width: 267px;
   padding: 20px;
   color: #fff;
-  font-family: 'Helvetica Neue';
+  font-family: $text-font;
   font-size: 17px;
   font-weight: 300;
   opacity: 0;
@@ -90,7 +101,7 @@
     font-size: 16px;
     display: block;
     padding-top: 20px;
-    color: #ffd700;
+    color: $primary-color;
   }
 }
 
