--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,3 +1,5 @@
+@import '../../global_val';
+
 .home-page {
   .text-zone {
     position: absolute;
@@ -12,34 +14,35 @@
     color: #fff;
     font-size: 53px;
     margin: 0;
-    font-family: 'Coolvetica';
+    font-family: $heading-font;
     font-weight: 400;
 
     // Opening h1 tag around title
     &::before {
       content: '<h1>';
-      font-family: 'La Belle Aurore';
+      font-family: $tags-font;
       font-size: 18px;
-      color: #ffd700;
+      color: $primary-color;
       opacity: 0.6;
       position: absolute;
-      margin-top: -40px;
+      margin-top: -20px;
       left: -10px;
     }
 
     // Closing h1 tag around title
     &::after {
       content: '</h1>';
-      font-family: 'La Belle Aurore';
+      font-family: $tags-font;
       font-size: 18px;
-      color: #ffd700;
+      color: $primary-color;
       opacity: 0.6;
       position: absolute;
-      margin-top: 32px;
-      margin-left: 35px;
+      margin-top: 38px;
+      margin-left: 20px;
       animation: fadeIn 1s 1.7s backwards;
     }
 
+    // 'S' Logo in heading (Steven)
     img {
       width: 32px;
       height: auto;
@@ -62,20 +65,20 @@
 
   // Contact me button
   .flat-button {
-    color: #ffd700;
+    color: $primary-color;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
     font-family: sans-serif;
     text-decoration: none;
     padding: 10px 18px;
-    border: 1px solid #ffd700;
+    border: 1px solid $primary-color;
     margin-top: 25px;
     float: left;
     animation: fadeIn 1s 1.8s backwards;
 
     &:hover {
-      background: #ffd700;
+      background: $primary-color;
       color: #333;
     }
   }
