--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,3 +1,5 @@
+@import '../../global_val';
+
 .page {
   width: 100%;
   height: 100%;
@@ -10,13 +12,13 @@
 }
 
 .tags {
-  color: #ffd700;
+  color: $primary-color;
   opacity: 0.6;
   position: absolute;
   bottom: 0;
   left: 120px;
   font-size: 18px;
-  font-family: 'La Belle Aurore';
+  font-family: $tags-font;
 }
 
 .bottom-tags {
@@ -52,8 +54,8 @@
 
     h1 {
       font-size: 53px;
-      font-family: 'Coolvetica';
-      color: #ffd700;
+      font-family: $heading-font;
+      color: $primary-color;
       font-weight: 400;
       margin-top: 0;
       margin-bottom: 40px;
@@ -62,7 +64,7 @@
 
       &::before {
         content: '<h1>';
-        font-family: 'La Belle Aurore';
+        font-family: $tags-font;
         font-size: 18px;
         position: absolute;
         margin-top: -10px;
@@ -73,7 +75,7 @@
 
       &::after {
         content: '</h1>';
-        font-family: 'La Belle Aurore';
+        font-family: $tags-font;
         font-size: 18px;
         line-height: 18px;
         position: absolute;
@@ -86,12 +88,13 @@
 
     p {
       font-size: 13px;
-      color: #fff;
+      color: $text-color;
       font-family: sans-serif;
       font-weight: 300;
       min-width: fit-content;
       animation: pulse 1s;
 
+      // Stagger animation of paragraphs
       &:nth-of-type(1) {
         animation-delay: 1.1s;
       }
@@ -108,7 +111,7 @@
 
   .text-animate-hover {
     &:hover {
-      color: #fff;
+      color: $text-color;
     }
   }
 }
