--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,10 +1,11 @@
 .stage-cube-cont {
   width: 50%;
-  height: 100%;
+  height: auto;
   top: 0;
   right: 0;
   padding-top: 18%;
   margin-left: 0;
+  margin-right: 1rem;
   position: absolute;
 }
 
