--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -36,7 +36,6 @@
       margin: 0;
       margin-bottom: 10px;
       list-style: none;
-      // overflow: hidden;
       display: block;
       position: relative;
       opacity: 0;
@@ -146,6 +145,7 @@
   float: right;
   width: 53%;
   height: 100%;
+  overflow: hidden;
 }
 
 .leaflet-container {
