--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,15 +1,109 @@
+// Config for particle effects
+$color-particle: #fff;
+$spacing: 2560px;
+$time-1: 60s;
+$time-2: 120s;
+$time-3: 180s;
+$time-4: 200s;
+
+// ----------------------------- Mixins -----------------------------
+// Box shadow value
+@function particles($max) {
+  $val: 0px 0px $color-particle;
+  @for $i from 1 through $max {
+    $val: #{$val}, random($spacing) + px random($spacing) + px $color-particle;
+  }
+  @return $val;
+}
+
+@mixin particles($max) {
+  box-shadow: particles($max);
+  border-radius: 50%;
+}
+
 .stage-cube-cont {
   width: 50%;
-  height: auto;
-  top: 0;
-  right: 0;
-  padding-top: 18%;
-  margin-left: 0;
-  margin-right: 1rem;
+  height: 85%;
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  // padding-top: 18%;
+  margin-left: 0;
+  margin: auto 0;
+  overflow: hidden;
+}
+
+.particle-bg,
+.animation-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.particle,
+.particle:after {
+  background: transparent;
+}
+
+.particle:after {
+  position: absolute;
+  content: '';
+  top: $spacing;
+}
+
+.particle-1 {
+  animation: animParticle $time-1 linear infinite;
+  @include particles(1000);
+  height: 2px;
+  width: 2px;
+}
+
+.particle-1:after {
+  @include particles(900);
+  height: 2px;
+  width: 2px;
+}
+
+.particle-2 {
+  animation: animParticle $time-2 linear infinite;
+  @include particles(800);
+  height: 2px;
+  width: 2px;
+}
+
+.particle-2:after {
+  @include particles(500);
+  height: 3px;
+  width: 3px;
+}
+
+.particle-3:after {
+  @include particles(1100);
+  height: 3px;
+  width: 3px;
+  border-radius: 50%;
+}
+
+.particle-4 {
+  animation: animParticle $time-4 linear infinite;
+  @include particles(1200);
+  height: 1px;
+  width: 1px;
+}
+
+.particle-4:after {
+  @include particles(700);
+  height: 1px;
+  width: 1px;
 }
 
 .cubespinner {
+  position: absolute;
+  top: 40%;
   animation-name: spincube;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
@@ -72,5 +166,15 @@
   }
   83% {
     transform: translateZ(-100px) rotateX(90.1deg);
+  }
+}
+
+// Particle animation
+@keyframes animParticle {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY($spacing * -1);
   }
 }
