--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -89,7 +89,7 @@
     font-size: 16px;
     padding: 20px;
     box-sizing: border-box;
-    resize: vertical;
+    resize: none;
 
     &::placeholder {
       font-weight: 600;
