--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -24,7 +24,7 @@
     opacity: 0.6;
     position: absolute;
     left: -2rem;
-    margin-top: 3.2rem;
+    margin-top: 4.5rem;
   }
 
   ul {
@@ -105,14 +105,20 @@
   .flat-button {
     color: $primary-color;
     background: 0 0; // Reset background properties to their initial values
-    font: 11px;
-    font-weight: 600;
-    letter-spacing: 3px;
+    font-size: 1.3rem;
+    font-weight: 400;
+    letter-spacing: 0.4rem;
+    font-family: sans-serif;
     text-decoration: none;
-    padding: 8px 10px;
+    padding: 1.2rem 2rem;
     border: 1px solid $primary-color;
-    border-radius: 4px;
     float: left;
+
+    &:hover {
+      background: $primary-color;
+      color: #333;
+      cursor: pointer;
+    }
   }
 }
 
