--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,5 +1,12 @@
 @import '../../global_val';
 
+.contact-page {
+  .text-zone {
+    // margin-top: 10px;
+    // margin-bottom: 10px;
+  }
+}
+
 .contact-form {
   width: 100%;
   margin-top: 7rem;
