--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -21,25 +21,27 @@ h1 {
   width: 100%;
   height: 100%;
   position: absolute;
+  min-height: 900px;
 }
 
 .top-tags {
   bottom: auto;
-  top: 3.5rem;
+  top: 2.5rem;
 }
 
 .tags {
   color: $primary-color;
   opacity: 0.6;
   position: absolute;
-  bottom: 0;
+  // bottom: 0;
   left: 12rem;
   font-size: 1.8rem;
   font-family: $tags-font;
 }
 
 .bottom-tags {
-  bottom: 3.5rem;
+  bottom: 2.5rem;
+  top: auto;
 }
 
 .container {
@@ -61,7 +63,7 @@ h1 {
 .contact-page {
   .text-zone {
     position: absolute;
-    left: 10%;
+    left: 16rem;
     top: 50%;
     transform: translateY(-50%);
     width: 35%;
