--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -4,7 +4,7 @@
   background: $navbar-background;
   width: 60px;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 3;
   min-height: 500px;
