Change color theme

--- a/src/_global_val.scss
+++ b/src/_global_val.scss
@@ -1,7 +1,9 @@
-$primary-color: #ffd700;
-$background-color: #022c43;
+// $primary-color: #ffd700;
+// $background-color: #022c43;
+$primary-color: #4fc1ff;
+$background-color: #1a1a1a;
 $text-color: #fff;
-$navbar-background: #181818;
+$navbar-background: #121212;
 $navbar-icons: #4d4d4e;
 
 $heading-font: 'Coolvetica';
