--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-$primary-color: #ffd700;
+$primary-color: #4fc1ff;
 
 @import 'animate.css';
 @import '~loaders.css/src/animations/ball-scale-ripple-multiple.scss';
