--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -68,7 +68,7 @@
   input[type='email'] {
     width: 100%;
     border: 0;
-    background: #115173;
+    background: #3b3b3b;
     color: #fff;
     height: 5rem;
     font-size: 1.6rem;
@@ -80,7 +80,7 @@
     }
 
     &:focus {
-      outline: solid 0.2rem black;
+      outline: solid 0.1rem grey;
       border-radius: 0.2rem;
       border: none;
     }
@@ -89,7 +89,7 @@
   textarea {
     width: 100%;
     border: 0;
-    background: #115173;
+    background: #3b3b3b;
     color: #fff;
     height: 5rem;
     min-height: 25rem;
@@ -103,7 +103,7 @@
     }
 
     &:focus {
-      outline: solid 0.2rem black;
+      outline: solid 0.1rem grey;
       border-radius: 0.2rem;
       border: none;
     }
@@ -154,7 +154,6 @@
 }
 
 .map-wrap {
-  background: rgba(8, 253, 216, 0.1);
   float: right;
   width: 53%;
   height: 100%;
@@ -166,7 +165,7 @@
   height: 100%;
   position: relative;
   opacity: 0;
-  animation: backInRight 1s 1.2s;
+  animation: backInRight 1s 1s;
   animation-fill-mode: forwards;
 
   .circle {
