--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './_global_val';
+
 html {
   font-size: 62.5%;
 }
@@ -6,8 +8,8 @@ body {
   margin: 0;
   font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
-  background: #022c43;
-  // overflow: hidden;
+  // background: #022c43;
+  background: $background-color;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
