Change logo colours

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -8,11 +8,13 @@
 }
 
 // Space character width in headings
+// Me, Myself & I: 24, 31, 33
+// Contact me: 42
 h1 {
-  .__23,
-  .__30,
-  .__32,
-  .__41 {
+  .__24,
+  .__31,
+  .__33,
+  .__42 {
     width: 2.5rem;
   }
 }
