--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -155,6 +155,7 @@ h1 {
   }
 }
 
+// ------------------------ Media queries ------------------------
 @media only screen and (max-width: 768px) {
   .tags {
     left: 9rem;
