Change page min-height based on route

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,6 +1,8 @@
 @import '../../global_val';
 
 .home-page {
+  min-height: 50%;
+
   .text-zone {
     position: absolute;
     left: 17rem;
@@ -155,10 +157,6 @@
       }
     }
   }
-
-  .page {
-    min-height: 800px;
-  }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -175,16 +173,12 @@
       top: 32%;
     }
   }
-
-  .page {
-    min-height: 850px;
-  }
 }
 
 @media only screen and (max-width: 768px) {
   .home-page {
     .text-zone {
-      left: 14rem;
+      left: 12.5rem;
     }
     h1 {
       font-size: 4rem;
@@ -220,9 +214,5 @@
         margin-top: 1.75rem;
       }
     }
-  }
-
-  .page {
-    min-height: 800px;
   }
 }
