--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -23,7 +23,7 @@ h1 {
   width: 100%;
   height: 100%;
   position: absolute;
-  min-height: 900px;
+  min-height: 800px; //default for all pages
 }
 
 .top-tags {
@@ -156,8 +156,28 @@ h1 {
 }
 
 // ------------------------ Media queries ------------------------
+@media only screen and (max-width: 1700px) {
+  h1 {
+    .__24,
+    .__31,
+    .__33,
+    .__42 {
+      width: 1.6rem;
+    }
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .tags {
     left: 9rem;
+  }
+
+  h1 {
+    .__24,
+    .__31,
+    .__33,
+    .__42 {
+      width: 1.2rem;
+    }
   }
 }
