--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -185,12 +185,69 @@ $time-4: 200s;
       font-size: 6.5rem;
 
       &::before {
-        top: -0rem;
+        top: 0rem;
       }
 
       &::after {
         bottom: -1.4rem;
       }
     }
+
+    p {
+      font-size: 1.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .page-about {
+    min-height: 900px;
+  }
+
+  .about-page .text-zone {
+    top: 26%;
+    width: 70%;
+  }
+
+  .stage-cube-cont {
+    width: 80%;
+    height: 40rem;
+    top: 71%;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    left: 6rem;
+    right: 0;
+
+    .cubespinner {
+      top: 25%;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .about-page .text-zone {
+    left: 12.5rem;
+    width: 65%;
+
+    h1 {
+      font-size: 4rem;
+
+      &::before {
+        top: -0.8rem;
+      }
+
+      &::after {
+        bottom: -1.6rem;
+      }
+    }
+
+    p {
+      font-size: 1.4rem;
+    }
+  }
+
+  .page-about {
+    min-height: 1050px;
   }
 }
