--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ textarea {
 .loader-active {
   display: block;
   position: absolute;
-  left: 0;
+  left: 60px;
   right: 0;
   top: 0;
   bottom: 0;
