--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -156,6 +156,10 @@
         margin-top: 2rem;
       }
     }
+
+    .flat-button {
+      margin-top: 0rem;
+    }
   }
 }
 
@@ -181,16 +185,16 @@
       left: 12.5rem;
     }
     h1 {
-      font-size: 4rem;
-      line-height: 4rem;
+      font-size: 3rem;
+      line-height: 3rem;
 
       img {
-        width: 2.2rem;
-        margin-left: 1.2rem;
+        width: 1.4rem;
+        margin-left: 1rem;
       }
 
       .__10 {
-        width: 1.2rem;
+        width: 1rem;
       }
 
       &::before {
