Center homepage characters in heading

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -20,6 +20,10 @@
     font-family: $heading-font;
     font-weight: 400;
 
+    span {
+      text-align: center;
+    }
+
     // Space width (web developer)
     .__10 {
       width: 2.5rem;
