--- a/src/App.scss
+++ b/src/App.scss
@@ -26,11 +26,10 @@ textarea {
 .loader-active {
   display: block;
   position: absolute;
-  left: 60px;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  left: 50vw;
+  top: 50vh;
   margin: auto;
+  padding: 0;
   width: 50px;
   height: 50px;
   animation: fadeOut 1s 1s;
