Create ProjectsList and ProjectsListItem components

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -85,6 +85,12 @@
       }
     }
 
+    a.projects-link {
+      &:after {
+        content: 'MY WORK';
+      }
+    }
+
     a.contact-link {
       &:after {
         content: 'CONTACT';
