--- a/src/components/Projects/ProjectsList.scss
+++ b/src/components/Projects/ProjectsList.scss
@@ -1,7 +1,7 @@
 @import '../../global_val';
 
 .page-projects {
-  min-height: 1200px;
+  // min-height: 1200px;
 }
 
 .projects-page {
@@ -17,6 +17,10 @@
     position: relative;
     margin-left: 16rem;
     margin-top: 10rem;
+
+    span {
+      text-align: center;
+    }
 
     &::before {
       content: '<h1>';
@@ -38,15 +42,55 @@
       opacity: 0.6;
     }
   }
+
+  .paragraph-div {
+    margin-left: 16rem;
+    margin-bottom: 5rem;
+
+    &::before {
+      content: '<p>';
+      font-family: $tags-font;
+      font-size: 1.8rem;
+      color: $primary-color;
+      opacity: 0.6;
+      position: absolute;
+      left: 14rem;
+      margin-top: -2.2rem;
+    }
+
+    &::after {
+      content: '</p>';
+      font-family: $tags-font;
+      font-size: 1.8rem;
+      color: $primary-color;
+      opacity: 0.6;
+      position: absolute;
+      left: 14rem;
+      margin-top: -1.6rem;
+    }
+
+    p {
+      font-size: 1.7rem;
+      color: $text-color;
+      font-family: sans-serif;
+      font-weight: 300;
+      min-width: fit-content;
+      animation: pulse 1s;
+
+      &:nth-of-type(1) {
+        animation-delay: 1.1s;
+      }
+    }
+  }
 }
 
 .projects-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   // grid-template-rows: repeat(auto-fill, minmax(350px, 1fr));
   padding: 0;
   margin-left: 16rem;
+  margin-right: 4rem;
   // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  // column-gap: 2rem;
   row-gap: 3rem;
 }
