--- a/src/components/Projects/ProjectsListItem.scss
+++ b/src/components/Projects/ProjectsListItem.scss
@@ -1,9 +1,13 @@
+@import '../../global_val';
+
 .project-card {
   height: 100%;
-  width: 90%;
+  min-height: 55rem;
+  width: 95%;
   background-color: #292929;
   border-radius: 0.8rem;
-  color: white;
+  color: $text-color;
+  position: relative;
 
   img {
     width: 100%;
@@ -11,7 +15,6 @@
     margin: 0;
     padding: 0;
     object-fit: cover;
-    // border-radius: 1.4rem;
     border-top-left-radius: 0.8rem;
     border-top-right-radius: 0.8rem;
   }
@@ -26,10 +29,34 @@
   h2 {
     font-weight: 600;
     font-size: 1.8rem;
+    margin-bottom: 3rem;
   }
 
   p {
     font-size: 1.6rem;
     font-weight: 300;
+    letter-spacing: 0.05rem;
+  }
+
+  .technologies {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 3rem;
+
+    .technology-tag {
+      margin: 0.4rem;
+      font-family: sans-serif;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #286180;
+      background-color: #73dbff;
+      padding: 0.8rem 1.2rem;
+      border-radius: 1rem;
+      text-align: center;
+    }
   }
 }
