Add useEffect to handle min-height conditionally

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -174,8 +174,9 @@ h1 {
   h1 {
     .__24,
     .__27,
-    .__37 {
-      width: 1.2rem;
+    .__37,
+    .__42 {
+      width: 1.1rem;
     }
   }
 }
