--- a/src/components/Projects/ProjectsList.scss
+++ b/src/components/Projects/ProjectsList.scss
@@ -1,7 +1,8 @@
 @import '../../global_val';
 
 .page-projects {
-  // min-height: 1200px;
+  min-height: 975px;
+  margin: 0;
 }
 
 .projects-page {
@@ -46,6 +47,7 @@
   .paragraph-div {
     margin-left: 16rem;
     margin-bottom: 5rem;
+    overflow: hidden;
 
     &::before {
       content: '<p>';
@@ -66,7 +68,7 @@
       opacity: 0.6;
       position: absolute;
       left: 14rem;
-      margin-top: -1.6rem;
+      margin-top: 0rem;
     }
 
     p {
@@ -76,6 +78,8 @@
       font-weight: 300;
       min-width: fit-content;
       animation: pulse 1s;
+      margin-top: 0;
+      margin-bottom: 0;
 
       &:nth-of-type(1) {
         animation-delay: 1.1s;
@@ -87,10 +91,48 @@
 .projects-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
-  // grid-template-rows: repeat(auto-fill, minmax(350px, 1fr));
   padding: 0;
   margin-left: 16rem;
   margin-right: 4rem;
-  // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   row-gap: 3rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .projects-page {
+    h1 {
+      font-size: 3rem;
+      margin-left: 12.5rem;
+
+      &::before {
+        top: -1.2rem;
+      }
+
+      &::after {
+        bottom: -2rem;
+      }
+    }
+
+    .paragraph-div {
+      margin-left: 12.5rem;
+      margin-top: 3.2rem;
+
+      &::before {
+        left: 10.5rem;
+        margin-top: -2rem;
+      }
+
+      &::after {
+        left: 10.5rem;
+        margin-top: -1.6rem;
+      }
+
+      p {
+        font-size: 1.4rem;
+      }
+    }
+
+    .projects-list {
+      margin-left: 12.5rem;
+    }
+  }
 }
