--- a/src/components/Projects/ProjectsListItem.scss
+++ b/src/components/Projects/ProjectsListItem.scss
@@ -1,8 +1,8 @@
 @import '../../global_val';
 
 .project-card {
-  height: 100%;
-  min-height: 55rem;
+  padding-bottom: 12rem;
+  height: auto;
   width: 95%;
   background-color: #292929;
   border-radius: 0.8rem;
@@ -62,6 +62,18 @@
       padding: 0.8rem 1.2rem;
       border-radius: 1rem;
       text-align: center;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .project-card {
+    h2 {
+      font-size: 1.6rem;
+    }
+
+    p {
+      font-size: 1.4rem;
     }
   }
 }
