--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,11 @@
 
 html {
   font-size: 62.5%;
+  min-height: 100vh;
 }
 
 body {
+  min-height: 100vh;
   margin: 0;
   font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
