Updates to projects list

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -195,6 +195,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .page-home {
+    min-height: 900px;
+  }
   .home-page {
     .text-zone {
       left: 11rem;
